fix-overflow-bug-in-mobile-device

--- a/src/Components/Home/Structures/Structures.scss
+++ b/src/Components/Home/Structures/Structures.scss
@@ -4,6 +4,10 @@
 
 
 .structures-container {
+
+  *{
+    overflow-x: hidden;
+  }
   margin: 5rem 0;
 
 
